# SpotifyAnalyzer

./: LICENSE  README.md
SpotifyAnalyzer/: .cache  .env.path  .gitignore  README.md  pyproject.toml  script_test.py  test1.py  test_genreprediction.py  test_spotifyanalysis.py
SpotifyAnalyzer/src/SpotifyAnalyzer/: GenrePrediction.py  SpotifyAnalyzer.py  SpotifyAnalyzerbeta.py  utils.py
SpotifyAnalyzer/src/user_data_save/: Blood is Broken Glass.csv  Liked_Songs.csv  List_Of_Playlists.csv
